--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
         h1 { 
             font-size: 30px;
         }
+        .links{
+            color: #ffffff;
+            text-align: center;
+            font-weight: bold;
+            font-size: 2em;
+            text-decoration: none;
+            /* underline */
+            text-decoration-color: #ffffff;
+        }
+        .links li {
+            display: inline;
+            padding: 10px;
+        }
+        .links a {
+            list-style-type: none;
+            color: #ffffff;
+            text-decoration: none;
+        }
+        .links a:hover {
+            color: #ff0000;
+        }
+        /* middle li should be centered around*/
     </style>
     <title>Github Site!!</title>
 </head>
@@ -20,7 +42,12 @@
     <div style="background-color: #000000; color: #ffffff; padding: 10px; text-align: center;">
         <h1>William C.</h1>
         <p>Software somethings</p>
-    </div>
 
+        <ui class="links" >
+            <li><a href=dog_points.html> Show Point Calculator</a></li>
+            <li>|</li>
+            <li><a href='radio_listener.html'>WMBC Radio</a></li>
+            </ui>
+    </div>
 </body>
 </html>
