Update DJ templates and pages

--- a/baseDJPage.html
+++ b/baseDJPage.html
@@ -8,6 +8,7 @@
   <script src="src/someJS.js"></script>
   <script src="src/showDB_Obscured_encoded.json" type="application/json"></script>
   <title>Behind The Show</title>
+  <link rel="icon" type="image/x-icon" href="/src/logo_225x255.png">
   <style>
     @media (max-width: 768px) {
 
