--- a/radio_devtools.html
+++ b/radio_devtools.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="src/showDB_Obscured_encoded.json" type="application/json"></script>
   <title>devtools</title>
+  <link rel="icon" type="image/x-icon" href="/src/logo_225x255.png">
   <style>
     .tool-container {
       width: 33.33%;
