--- a/radio_listener.html
+++ b/radio_listener.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="src/somecss.css">
 
   <title>Temp Unofficial WMBC</title>
+  <link rel="icon" type="image/x-icon" href="/src/logo_225x255.png">
   <style>
+    
     @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
 
     [class*="fontawesome-"]:before {
