--- a/schedulePage.html
+++ b/schedulePage.html
@@ -9,6 +9,7 @@
   <script src="src/showDB_Obscured_encoded.json" type="application/json"></script>
   <script src="src/specialEvents.json" type="application/json"></script>
   <title>Schedule</title>
+  <link rel="icon" type="image/x-icon" href="/src/logo_225x255.png">
   <style>
     .calendar {
       width: 100%;
