--- a/aquarium_layout.html
+++ b/aquarium_layout.html
@@ -445,7 +445,7 @@ Z = closepath (close the path) -->
     </div>
   </div>
   <footer class="footer">
-    <p><input id="startTimerButton" type="button" value="WMBC's Web Player," style="display: none;"> made by will :3
+    <p><input id="startTimerButton" type="button" value="WMBC's Web Player," style="display: none;"> <input id="addClock" type="button" value=" made by will :3"></p>
     </p>
   </footer>
 </body>
