SHUT UPPPP (nettspend reference)

--- a/aquarium_layout.html
+++ b/aquarium_layout.html
@@ -152,7 +152,7 @@ Z = closepath (close the path) -->
       <div class="djInfo lowerHalfChild" style="margin-left:1%">
         <div class="current-DJ">
           <!-- get current DJ via the DB schedule if exists, and then link their page  -->
-          <p>Current DJ(s): <span id="currDJSpan"></span></p>
+          <p id="Current-OnDeck" >Current DJ(s): <span id="currDJSpan"></span></p>
         </div>
         <div class="Show-Info-up-next">
           <div id="showInfoBox">
